# Jo-Mako-Anki.github.io

./: guide.html  index.html  resources.html
assets/: pyproject.toml
assets/courses/: 0100000.sgb  0100010.sgb  0100040.sgb  0100090.sgb  0100120.sgb  0100130.sgb  0100140.sgb  0100150.sgb  0100151.sgb  0100160.sgb  0100301.sgb  0100302.sgb
assets/scripts/chrono/: _kanjax_with_koohii.js
guide/: anki-addons.html  anki-in-depth.html  anki.html  grammar.html  immersion.html  introduction.html  kana.html  kanji.html  morphman-study.html  morphman.html  morphman_anime_difficulty.html  morphman_readability.html  vocabulary.html
js/: highlight_active_page.js  toc_script.js  toggle_navbar.js
resources/: premade_note_styles.html
styles/: _colors.scss  _features.scss  _footer.scss  _guide_text.scss  _hero.scss  _method.scss  _navbar.scss  _sidebar.scss  _variables.scss  style.css  style.css.map  style.scss
updates/: progress1.html  progress2.html  progress3.html  progress4.html
webpages/: Plan.txt  index.html  sticky.html
webpages/courses/: Courses_index.html  reading.html
webpages/downloads/: Downloads_index.html  download.html
webpages/guide/: Guide_index.html  Introduction.html  Reading course.html  anki-addons.html  anki-in-depth.html  anki.html  grammar.html  immersion.html  kana.html  kanji.html  morphman-study.html  morphman.html  morphman_anime_difficulty.html  morphman_readability.html  vocabulary.html
webpages/how_to_learn_japanese/: anki-addons.html  how_to_japanese.html  immersion.html  kana.html  morphman.html  morphman_anime_difficulty.html
(+37 files in other folders)
