[tool.poetry]
name = "assets"
version = "0.1.0"
description = ""
authors = ["b0und <f1arenova1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
optimize-images = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
